syntax = "proto3";

package tgbot.v1;

option go_package = "github.com/auvn/go-klubyorg/pkg/gen/proto/tgbot/v1;tgbotv1";

message StorageMetadata {
  message FileReceipt {
    int64 message_id = 1;
  }
}

message Callbacks {
  message Data {
    oneof v {
      ChangeDateTime change_datetime = 1;
      SelectDuration select_duration = 2;
      SelectDateTime select_date_time = 3;
      SelectHourPrecision select_hour_precision = 4;
      SelectHour select_hour = 5;

      Empty finalize = 100;
      Empty reset = 101;

      Pager update_pager = 200;
    }
  }

  message Empty {}

  message SelectHourPrecision {
    bool halfes = 1;
  }

  message ChangeDateTime {
    int32 datetime = 1;
  }

  message SelectDateTime {
    int32 datetime = 1;
  }

  message SelectHour {
    int32 hour = 1;
  }

  message SelectDuration {
    int32 hour_halfs = 1;
  }

  message Pager {
    int32 limit = 1;
    int32 offset = 2;
  }
}

message State {
  int32 ts = 1;
  oneof v {
    CheckCourts check_courts = 100;
    CheckCourtsResults check_courts_results = 101;
  }

  message CheckCourts {
    Callbacks.SelectDateTime datetime = 1;
    Callbacks.SelectDuration duration = 2;
    Callbacks.SelectHourPrecision hour_precision = 3;
  }

  message CheckCourtsResults {
    CheckCourts params = 1;
    Callbacks.Pager pager = 2;
    StorageMetadata.FileReceipt file_receipt = 3;
  }

  message AvailableCourts {
    repeated Club clubs = 1;

    message Club {
      string name = 1;
      string address = 2;
      string url = 3;
      repeated Price prices = 4;
    }

    message Price {
      string amount = 1;
      string court_type = 2;
    }
  }
}
